# tftrt-convert-comparison

./: .gitignore  README.md  compare.sh
cpp/: CMakeLists.txt  build.sh  converter.cc  e2e_converter.cc  freeze.cc  main.cc
patch/: tftrt-convert.patch  trt-build-verbose.patch
py/: compare.py  convert.py  freeze.py
scripts/: compare_e2e.sh  compare_frozen.sh  compare_partial.sh
util/: compare.py  node_types.py  plot.py
